# octopus

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
api/: README.md  api.py  async_request.py  cache.py  constants.py  data.py  data_service.py  database.py  db_session.py  functions.py  models.py  processing.py
db/: README.md  init_db.py  schema.sql
frontend/: .env.example  .eslintrc.cjs  .prettierignore  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  ag-grid-theme.css
frontend/src/components/: CostSummaryCard.tsx  CostSummaryTable.tsx  DetailGrid.tsx  TariffCard.tsx
frontend/src/services/: api.ts
frontend/src/test/: App.test.tsx  CostSummaryCard.test.tsx  CostSummaryTable.test.tsx  DetailGrid.test.tsx  api.test.ts
frontend/src/utils/: detailGridUtils.ts
tests/: conftest.py  test_api.py  test_cache.py  test_data_service.py  test_processing.py
