[tool.poetry]
name = "octopus"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
fastapi = "^0.109.0"
polars = "^0.20.0"
asyncio = "^4.0.0"
aiohttp = "^3.13.2"
uvicorn = "^0.38.0"
python-dotenv = "^1.0.0"
dotenv = "^0.9.9"
cachetools = "^5.3.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
